syntax = "proto3";

package tron.curvefi.v1;

message Events { repeated Transaction transactions = 1; }

message Transaction {
  bytes hash = 1;
  bytes from = 2;
  optional bytes to = 3;
  uint64 nonce = 5;
  string gas_price = 6; // uint256
  uint64 gas_limit = 7;
  uint64 gas_used = 8;
  string value = 9; // uint256
  repeated Log logs = 10;
}

message Log {
  bytes address = 1;
  uint64 ordinal = 2;
  repeated bytes topics = 3;
  bytes data = 4;
  oneof log {
    TokenExchange token_exchange = 10;
    AddLiquidity add_liquidity = 11;
    RemoveLiquidity remove_liquidity = 12;
    RemoveLiquidityOne remove_liquidity_one = 13;
    RemoveLiquidityImbalance remove_liquidity_imbalance = 14;
    CommitNewAdmin commit_new_admin = 15;
    NewAdmin new_admin = 16;
    CommitNewFee commit_new_fee = 17;
    NewFee new_fee = 18;
    RampA ramp_a = 19;
    StopRampA stop_ramp_a = 20;
  }
}

message TokenExchange {
  bytes buyer = 1;
  string sold_id = 2; // int128
  string tokens_sold = 3; // uint256
  string bought_id = 4; // int128
  string tokens_bought = 5; // uint256
}

message AddLiquidity {
  bytes provider = 1;
  repeated string token_amounts = 2; // uint256[3]
  repeated string fees = 3; // uint256[3]
  string invariant = 4; // uint256
  string token_supply = 5; // uint256
}

message RemoveLiquidity {
  bytes provider = 1;
  repeated string token_amounts = 2; // uint256[3]
  repeated string fees = 3; // uint256[3]
  string token_supply = 4; // uint256
}

message RemoveLiquidityOne {
  bytes provider = 1;
  string token_amount = 2; // uint256
  string coin_amount = 3; // uint256
}

message RemoveLiquidityImbalance {
  bytes provider = 1;
  repeated string token_amounts = 2; // uint256[3]
  repeated string fees = 3; // uint256[3]
  string invariant = 4; // uint256
  string token_supply = 5; // uint256
}

message CommitNewAdmin {
  string deadline = 1; // uint256
  bytes admin = 2;
}

message NewAdmin {
  bytes admin = 1;
}

message CommitNewFee {
  string deadline = 1; // uint256
  string fee = 2; // uint256
  string admin_fee = 3; // uint256
}

message NewFee {
  string fee = 1; // uint256
  string admin_fee = 2; // uint256
}

message RampA {
  string old_a = 1; // uint256
  string new_a = 2; // uint256
  string initial_time = 3; // uint256
  string future_time = 4; // uint256
}

message StopRampA {
  string a = 1; // uint256
  string t = 2; // uint256
}

// Store messages
message PoolInfo {
  bytes pool_address = 1;
  bytes provider = 2;
  string total_liquidity = 3; // uint256
}
